@@ -1,5 +1,15 @@
 2008-11-13  David Teller  <David.Teller@univ-orleans.fr>
 
+	* src/core/batteries_core_threads.ml: [IO] is now [Extlib_threads.IOThreads]
+
+	* src/core/extlib_threads/IOThreads.mli: created
+
+	* src/core/batteries_core_threads.ml: [Mutex] is now [Extlib_threads.ExtMutex.Mutex]
+
+	* src/core/extlib_threads.mlpack: [ExtMutex] added
+
+	* src/core/extlib_threads/extMutex.ml*: created
+
 	* src/core/extlib/innerIO.ml: [outputs_add], [outputs_remove], [create_in], [create_out] now protected by [lock], [unlock]
 
 	* src/core/extlib_threads/extPervasivesThreads.ml: [io_mutex], [io_lock], [io_unlock] added
